feat: unify world model and unit capability graph