@@ -1,6 +1,9 @@
 package dev.harrjdk.robotmcp.tools.software;
 
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import org.springframework.ai.tool.annotation.Tool;
+import org.springframework.ai.tool.annotation.ToolParam;
 import org.springframework.stereotype.Component;
 
 import java.io.BufferedReader;
@@ -8,9 +11,22 @@ import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
+import java.util.List;
 
+/**
+ * 面向软件问题的轻量网页检索工具。
+ *
+ * <p>使用 DuckDuckGo Instant Answer API 获取公开摘要和相关主题；它适合问题初筛，
+ * 不应被当作完整网页浏览或权威结论来源。</p>
+ */
 @Component
 public class WebSearchTool {
+
+    /** 避免单次工具调用返回过多噪声结果，保留最相关的少量主题。 */
+    private static final int MAX_RELATED_RESULTS = 5;
+    private final ObjectMapper objectMapper = new ObjectMapper();
 
     /**
      * 搜索互联网，查找技术问题解决方案或软件安装教程。
@@ -20,9 +36,10 @@ public class WebSearchTool {
             搜索互联网，查找技术问题的解决方案、软件安装教程或错误信息排查方法。
             当软件安装失败或遇到不明确的错误时，可以使用此工具搜索相关信息。
             """)
-    public String webSearch(String query) {
+    public String webSearch(@ToolParam(description = "要搜索的关键词或技术问题") String query) {
         try {
-            String encodedQuery = URLEncoder.encode(query, "UTF-8");
+            if (query == null || query.isBlank()) return "请输入要搜索的关键词。";
+            String encodedQuery = URLEncoder.encode(query, StandardCharsets.UTF_8);
             String urlStr = "https://api.duckduckgo.com/?q=" + encodedQuery + "&format=json&no_html=1&skip_disambig=1";
 
             URL url = new URL(urlStr);
@@ -30,6 +47,8 @@ public class WebSearchTool {
             conn.setRequestMethod("GET");
             conn.setConnectTimeout(5000);
             conn.setReadTimeout(5000);
+            conn.setRequestProperty("Accept", "application/json");
+            conn.setRequestProperty("User-Agent", "MyHelper/1.0 WebSearchTool");
 
             int responseCode = conn.getResponseCode();
             if (responseCode != 200) {
@@ -38,17 +57,19 @@ public class WebSearchTool {
 
             StringBuilder response = new StringBuilder();
             try (BufferedReader reader = new BufferedReader(
-                    new InputStreamReader(conn.getInputStream()))) {
+                    new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8))) {
                 String line;
                 while ((line = reader.readLine()) != null) {
                     response.append(line);
                 }
             }
+            conn.disconnect();
 
-            // 简单解析 JSON（不引入额外依赖，只提取摘要）
-            String json = response.toString();
-            String abstractText = extractValue(json, "\"AbstractText\":\"");
-            String definition = extractValue(json, "\"Definition\":\"");
+            JsonNode root = objectMapper.readTree(response.toString());
+            String abstractText = root.path("AbstractText").asText("");
+            String definition = root.path("Definition").asText("");
+            List<String> relatedResults = new ArrayList<>();
+            collectRelatedTopics(root.path("RelatedTopics"), relatedResults);
 
             StringBuilder result = new StringBuilder();
             if (!abstractText.isEmpty()) {
@@ -56,6 +77,12 @@ public class WebSearchTool {
             }
             if (!definition.isEmpty()) {
                 result.append("📌 ").append(definition).append("\n");
+            }
+            if (!relatedResults.isEmpty()) {
+                result.append("相关结果：\n");
+                for (String related : relatedResults) {
+                    result.append("- ").append(related).append("\n");
+                }
             }
             if (result.isEmpty()) {
                 return "🔍 未找到与 '" + query + "' 相关的直接结果，建议更换关键词重试。";
@@ -71,15 +98,20 @@ public class WebSearchTool {
         }
     }
 
-    /**
-     * 极简 JSON 值提取（仅用于 Demo，生产环境建议使用 Jackson）
-     */
-    private String extractValue(String json, String key) {
-        int start = json.indexOf(key);
-        if (start == -1) return "";
-        start += key.length();
-        int end = json.indexOf("\"", start);
-        if (end == -1) return "";
-        return json.substring(start, end).replace("\\\"", "\"").replace("\\n", "\n");
+    /** DuckDuckGo 的 RelatedTopics 既可能是结果数组，也可能是嵌套 Topic 分组。 */
+    private void collectRelatedTopics(JsonNode topics, List<String> results) {
+        if (topics == null || results.size() >= MAX_RELATED_RESULTS) return;
+        if (topics.isArray()) {
+            for (JsonNode topic : topics) {
+                if (results.size() >= MAX_RELATED_RESULTS) return;
+                String text = topic.path("Text").asText("");
+                String url = topic.path("FirstURL").asText("");
+                if (!text.isBlank()) {
+                    results.add(url.isBlank() ? text : text + " — " + url);
+                } else {
+                    collectRelatedTopics(topic.path("Topics"), results);
+                }
+            }
+        }
     }
 }
